rudi: developer tool to convert intEnum to setIntEnum, copying the existing data
gwen: adding DBSV format as input option in pointer value converter
manu: fixing release mechanism broken due to build path change
manu: allowing multi-types also for different pointer types
gwen: adding Data Definition and Query Function Inliner providers to Makumba configuration overview 

NOT TO BE RELEASED YET (need more testing)
manu: auto-complete for mak:input (char and ptr)
manu, marius: edit-in-place for mak:input and mak:list ("editable" attribute). Is yet to be finished.

------------------------------------------
- add your changes -

<!-- ============================================================================= -->
<!-- ====================== NOT-TESTED HEAD RELEASES ============================= -->
0.8.2.7.4 2 Apr 2010
manu: fixing bug: multi-type parameters are accepted again
manu: optimising new query generation
rudi: changing ANT build path to build/ (instead of classes)

0.8.2.7.3 27 Mar 2010
rudi: fixing a bug in the reference checker, closing the DB connection
rudi: fixed a bug in the data query servlet - not all columns were displayed correctly; now, displaying all columns that have at least one non-null value
manu: refactoring the SQL query generation and the multiple attribute parametrizer, moving it in the tree-based query analysis and introducing new SQLQueryGenerator interface
manu: disabling automatic reloading of configuration file by apache-commons-cli in the MakumbaINIConfiguration
cristi: hopefuly fixing a lock cause in the new mdd parser

0.8.2.7.2 09 Feb 2010
manu: fixing bug 1163

0.8.2.7.1 03 Feb 2010
manu: fixing broken reference to JSP 2.1 API

0.8.2.7 29 Jan 2010
manu: form submission message also shown for successful response
manu: fixing bug in MDD parser that would prevent overriding of IDD fields in sub-tables (setComplex, ptrOne)